WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
13091
REGRESSION (
r20075
): Wrong text style and pixel break in Apple Store Locator HUD
https://bugs.webkit.org/show_bug.cgi?id=13091
Summary
REGRESSION (r20075): Wrong text style and pixel break in Apple Store Locator HUD
mitz
Reported
2007-03-16 01:38:57 PDT
To see the problem, open the URL and click the first store on the list on the left to bring up the HUD on the map. The "Address" and "Services" labels on the tabs should be white and centered vertically. Instead they are light blue and aligned with the top of the tab. There is also a 1-pixel wide gap across the HUD.
Attachments
Screenshot
(41.10 KB, image/png)
2007-03-16 01:39 PDT
,
mitz
no flags
Details
Screenshot from Safari 2 (expected rendering)
(41.11 KB, image/png)
2007-03-16 01:43 PDT
,
mitz
no flags
Details
Test case
(593 bytes, text/html)
2007-03-16 04:58 PDT
,
mitz
no flags
Details
Add inline style from CSS rules only in AnnotateForInterchange mode
(6.14 KB, patch)
2007-03-16 05:47 PDT
,
mitz
mrowe
: review-
Details
Formatted Diff
Diff
Add inline style from CSS rules only in AnnotateForInterchange mode
(9.25 KB, patch)
2007-03-19 00:47 PDT
,
mitz
mrowe
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2007-03-16 01:39:27 PDT
Created
attachment 13658
[details]
Screenshot
mitz
Comment 2
2007-03-16 01:43:51 PDT
Created
attachment 13659
[details]
Screenshot from Safari 2 (expected rendering)
mitz
Comment 3
2007-03-16 03:25:49 PDT
Regressed in <
http://trac.webkit.org/projects/webkit/changeset/20075
>.
mitz
Comment 4
2007-03-16 04:58:10 PDT
Created
attachment 13663
[details]
Test case
Mark Rowe (bdash)
Comment 5
2007-03-16 05:20:45 PDT
<
rdar://problem/5068260
>
mitz
Comment 6
2007-03-16 05:47:31 PDT
Created
attachment 13664
[details]
Add inline style from CSS rules only in AnnotateForInterchange mode
Mark Rowe (bdash)
Comment 7
2007-03-18 16:55:30 PDT
Landed in
r20297
.
Mark Rowe (bdash)
Comment 8
2007-03-18 19:05:23 PDT
And back out again in
r20302
. This introduced layout test failures related to web archives. <
http://build.webkit.org/results/post-commit-powerpc-mac-os-x/6102/webarchive/
> has the diffs.
mitz
Comment 9
2007-03-19 00:47:40 PDT
Created
attachment 13702
[details]
Add inline style from CSS rules only in AnnotateForInterchange mode Added updated results for three webarchive tests that were missing from the previous patch. The new results are identical to the results prior to
r20075
.
mitz
Comment 10
2007-03-19 01:02:50 PDT
Comment on
attachment 13702
[details]
Add inline style from CSS rules only in AnnotateForInterchange mode Testing webkit-reviews mail
mitz
Comment 11
2007-03-19 01:35:21 PDT
Comment on
attachment 13702
[details]
Add inline style from CSS rules only in AnnotateForInterchange mode mitz denying bdash's request
Mark Rowe (bdash)
Comment 12
2007-03-19 01:40:21 PDT
Comment on
attachment 13702
[details]
Add inline style from CSS rules only in AnnotateForInterchange mode Please sir, may I have another?
mitz
Comment 13
2007-03-19 01:42:29 PDT
Comment on
attachment 13702
[details]
Add inline style from CSS rules only in AnnotateForInterchange mode mitz denying bdash
Mark Rowe (bdash)
Comment 14
2007-03-19 01:59:02 PDT
Comment on
attachment 13702
[details]
Add inline style from CSS rules only in AnnotateForInterchange mode One more test of bugzilla emails. Sorry for the mess!
mitz
Comment 15
2007-03-19 02:00:17 PDT
Comment on
attachment 13702
[details]
Add inline style from CSS rules only in AnnotateForInterchange mode no way!
Mark Rowe (bdash)
Comment 16
2007-03-19 06:02:16 PDT
And landed again in
r20319
. Thanks Mitz!
David Kilzer (:ddkilzer)
Comment 17
2007-03-20 03:54:53 PDT
(In reply to
comment #9
)
> Added updated results for three webarchive tests that were missing from the > previous patch. The new results are identical to the results prior to
r20075
.
Nice! I was wondering where all that extra style info came from.
http://trac.webkit.org/projects/webkit/changeset/20075
http://trac.webkit.org/projects/webkit/changeset/20319
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug