2007-03-18  Mitz Pettel  <mitz@webkit.org>

Reviewed by Tim Hatcher.

        - fix http://bugs.webkit.org/show_bug.cgi?id=13091
          REGRESSION (r20075): Wrong text style and pixel break in Apple Store Locator HUD

        Test: fast/innerHTML/additional-inline-style.html

        * editing/markup.cpp:
        (WebCore::startMarkup): Changed to add inline style based on CSS rules only
        in AnnotateForInterchange mode.

2007-03-18  Mitz Pettel  <mitz@webkit.org>

        Reviewed by Tim Hatcher.

        - test and updated result for http://bugs.webkit.org/show_bug.cgi?id=13091
          REGRESSION (r20075): Wrong text style and pixel break in Apple Store Locator HUD

        * editing/pasteboard/paste-table-002-expected.txt:
        * fast/innerHTML/additional-inline-style-expected.txt: Added.
        * fast/innerHTML/additional-inline-style.html: Added.


git-svn-id: svn://svn.chromium.org/blink/trunk@20297 bbb929c8-8fbe-4397-9dbb-9b2b20218538